Fixed download getting stuck at 7/10 and rewrote the sidebar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -195,7 +195,7 @@ button {
     align-items: center;
     height: 100%;
     width: 100%;
-    font-size: 22.5px;
+    font-size: 17.5px;
 }
 
 .download-speed-counter {
